@@ -1,5 +1,17 @@
 2016-01-05  Filip Pizlo  <fpizlo@apple.com>
 
+        FTL B3 should do In
+        https://bugs.webkit.org/show_bug.cgi?id=152744
+
+        Reviewed by Michael Saboff.
+
+        This was easy; I just used the same idiom that we already established for ICs in FTL B3.
+
+        * ftl/FTLLowerDFGToLLVM.cpp:
+        (JSC::FTL::DFG::LowerDFGToLLVM::compileIn):
+
+2016-01-05  Filip Pizlo  <fpizlo@apple.com>
+
         Implement B3 version of FTL::Output::check()
         https://bugs.webkit.org/show_bug.cgi?id=152743
 
